--- a/.config/qt6ct/qt6ct.conf
+++ b/.config/qt6ct/qt6ct.conf
@@ -1,6 +1,7 @@
 [Appearance]
-color_scheme_path=/home/ayoub/.local/share/color-schemes/nordicbluish.colors
+color_scheme_path=/home/ayoub/.local/share/color-schemes/NordicDarker.colors
 custom_palette=true
+icon_theme=Nordic-darker
 standard_dialogs=default
 style=kvantum-dark
 
@@ -24,7 +25,7 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\0\0\0\v2\0\0\x3\xfe\0\0\a\x80\0\0\0\0\0\0\v?\0\0\x4\x15\0\0\0\x1\x2\0\0\0\a\x80\0\0\a\x80\0\0\0\0\0\0\v2\0\0\x3\xfe)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\a\x80\0\0\0\0\0\0\xe\xef\0\0\x3\xfc\0\0\a\x80\0\0\0\0\0\0\v?\0\0\x4\x15\0\0\0\x1\x2\0\0\0\a\x80\0\0\a\x80\0\0\0\0\0\0\xe\xef\0\0\x3\xfc)
 
 [Troubleshooting]
 force_raster_widgets=1
