--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,8 +1,8 @@
 # BACKGROUND
 background {
     monitor =
-    path = ~/.config/hypr/murky_peaks.jpg
-    blur_passes = 0
+    path = ~/Pictures/wallpapers/ign_LakesideDeer-02.png
+    blur_passes = 2
     contrast = 0.8916
     brightness = 0.8172
     vibrancy = 0.1696
